--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v1
-teamB=v4
-maps=DefaultMedium
+teamA=v4
+teamB=v5
+maps=DefaultSmall
 
 # Some optional configurations you can adjust as you need
 
