--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v4
-teamB=v5
-maps=DefaultSmall
+teamA=v5
+teamB=v6
+maps=DefaultLarge
 
 # Some optional configurations you can adjust as you need
 
