--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v5
-teamB=v6
-maps=DefaultLarge
+teamA=v4
+teamB=v7
+maps=DefaultSmall
 
 # Some optional configurations you can adjust as you need
 
