--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v4
-teamB=v7
-maps=DefaultSmall
+teamA=v7
+teamB=v8
+maps=DefaultHuge
 
 # Some optional configurations you can adjust as you need
 
