--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v7
-teamB=v8
-maps=DefaultHuge
+teamA=v8
+teamB=v9
+maps=DefaultLarge
 
 # Some optional configurations you can adjust as you need
 
