--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v8
+teamA=v10
 teamB=v9
-maps=DefaultLarge
+maps=DefaultSmall
 
 # Some optional configurations you can adjust as you need
 
