--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v10
-teamB=v11
-maps=DefaultSmall
+teamA=v11
+teamB=v12
+maps=DefaultLarge
 
 # Some optional configurations you can adjust as you need
 
