--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
 teamA=v11
-teamB=v12
-maps=DefaultLarge
+teamB=v13
+maps=DefaultSmall
 
 # Some optional configurations you can adjust as you need
 
