--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v13
-teamB=v15
-maps=DefaultSmall
+teamA=v15
+teamB=v16
+maps=DefaultLarge
 
 # Some optional configurations you can adjust as you need
 
