--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v15
+teamA=v17
 teamB=v16
-maps=DefaultLarge
+maps=Soccer
 
 # Some optional configurations you can adjust as you need
 
