--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
 teamA=v17
-teamB=v16
-maps=Soccer
+teamB=v18
+maps=Rivers
 
 # Some optional configurations you can adjust as you need
 
