--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v17
+teamA=v19
 teamB=v18
-maps=Rivers
+maps=Fountain
 
 # Some optional configurations you can adjust as you need
 
