--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v19
-teamB=v20
-maps=SteamboatMickey
+teamA=v20
+teamB=v21
+maps=Soccer
 
 # Some optional configurations you can adjust as you need
 
