--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v20
-teamB=v21
-maps=Soccer
+teamA=v0_POST
+teamB=v6
+maps=Tunnels
 
 # Some optional configurations you can adjust as you need
 
