--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # What are you trying to run?
 
-teamA=v0_POST
-teamB=v6
+teamA=v1_POST
+teamB=v0_POST
 maps=Tunnels
 
 # Some optional configurations you can adjust as you need
