Added Postv2 and Postv3

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v1_POST
-teamB=v0_POST
-maps=Tunnels
+teamA=v2_POST
+teamB=v3_POST
+maps=DefaultLarge
 
 # Some optional configurations you can adjust as you need
 
