--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v2_POST
-teamB=v3_POST
-maps=DefaultLarge
+teamA=v21
+teamB=v4_POST
+maps=Islands
 
 # Some optional configurations you can adjust as you need
 
