--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # What are you trying to run?
 
-teamA=v21
-teamB=v4_POST
-maps=Islands
+teamA=v5_POST
+teamB=v1_POST
+maps=English
 
 # Some optional configurations you can adjust as you need
 
